; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/raspicam/extr_RaspiCamControl.c_drc_mode_from_string.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/raspicam/extr_RaspiCamControl.c_drc_mode_from_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@drc_mode_map = common dso_local global i32 0, align 4
@drc_mode_map_size = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"Unknown DRC level: %s\00", align 1
@MMAL_PARAMETER_DRC_STRENGTH_OFF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @drc_mode_from_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @drc_mode_from_string(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = load i32, i32* @drc_mode_map, align 4
  %7 = load i32, i32* @drc_mode_map_size, align 4
  %8 = call i32 @raspicli_map_xref(i8* %5, i32 %6, i32 %7)
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, -1
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i32, i32* %4, align 4
  store i32 %12, i32* %2, align 4
  br label %17

13:                                               ; preds = %1
  %14 = load i8*, i8** %3, align 8
  %15 = call i32 @vcos_log_error(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i8* %14)
  %16 = load i32, i32* @MMAL_PARAMETER_DRC_STRENGTH_OFF, align 4
  store i32 %16, i32* %2, align 4
  br label %17

17:                                               ; preds = %13, %11
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i32 @raspicli_map_xref(i8*, i32, i32) #1

declare dso_local i32 @vcos_log_error(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
